<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:background="@color/timer_bg" >
	<View
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:background="@color/box_gray"
			/>
	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:paddingBottom="2dp">

		<RadioButton
				android:id="@+id/radio_button0"
				style="@style/main_footbar_radio"
				android:drawableTop="@drawable/widget_buycenter"
				android:textStyle="bold"
				android:layout_weight="1"
				android:text="@string/navigation_buycenter" />
		<RadioButton
				android:id="@+id/radio_button2"
				style="@style/main_footbar_radio"
				android:drawableTop="@drawable/widget_groupbuy"
				android:textStyle="bold"
				android:layout_weight="1"
				android:text="@string/navigation_groupbuy" />
		<RadioButton
				android:id="@+id/radio_button1"
				style="@style/main_footbar_radio"
				android:drawableTop="@drawable/widget_awardinfo"
				android:textStyle="bold"
				android:layout_weight="1"
				android:text="@string/navigation_awardinfo" />
		<RadioButton
				android:id="@+id/radio_button3"
				style="@style/main_footbar_radio"
				android:drawableTop="@drawable/widget_mylottery"
				android:textStyle="bold"
				android:layout_weight="1"
				android:text="@string/navigation_mylottery" />
		<RadioButton
				android:id="@+id/radio_button4"
				style="@style/main_footbar_radio"
				android:drawableTop="@drawable/widget_more"
				android:textStyle="bold"
				android:layout_weight="1"
				android:text="@string/navigation_more" />

	</LinearLayout>
</LinearLayout>